添加了markdown处理器

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,8 +31,9 @@ body{
   padding:.3rem;
   border-radius: .3rem;
   border:1px solid #eee;
-
-
+}
+.comm-right{
+  /* position: absolute; */
 }
 .comm-main{
   margin-top: .5rem;
@@ -68,4 +69,13 @@ body{
 }
 .center{
   text-align: center;
+}
+code {
+  display: block ;
+   background-color:#f3f3f3;
+   padding: .5rem !important;
+   overflow-y: auto;
+   font-weight: 300;
+   font-family: Menlo, monospace;
+   border-radius: .3rem;
 }
