--- a/styles/pages/detailed.module.css
+++ b/styles/pages/detailed.module.css
@@ -3,21 +3,10 @@
     text-align: center;
     padding: 1rem;
 }
-.center{
-    text-align: center;
-}
+
 .detailedContent{
     padding: 1.3rem;
     font-size: 1rem;
-}
-.code {
-    display: block ;
-     background-color:#f3f3f3;
-     padding: .5rem !important;
-     overflow-y: auto;
-     font-weight: 300;
-     font-family: Menlo, monospace;
-     border-radius: .3rem;
 }
 
 .titleAnchor{
@@ -29,10 +18,15 @@
     font-size: .9rem !important;
     border-bottom: 1px dashed #eee;
 }
-
+.detailedNav{
+    top:1rem;
+}
 .navTitle{
     text-align: center;
     color: #888;
     border-bottom: 1px solid rgb(30, 144, 255);
 
+}
+.articleMenu{
+    font-size: .7rem;
 }
